--- a/TD1/TD1.ipynb
+++ b/TD1/TD1.ipynb
@@ -1262,7 +1262,7 @@
         "id": "1352da3a"
       },
       "source": [
-        "En suivant cette idée, il nous suffit de prendre $\\mathcal{N}(0,~0.51)$ pour avoir une normale dont 95% des valeurs se situent entre -1 et 1."
+        "En suivant cette idée, il nous suffit de prendre $\\mathcal{N}(0,~1/d)$ pour avoir une loi qui minimise la variance."
       ]
     },
     {
