--- a/TD1/TD1.ipynb
+++ b/TD1/TD1.ipynb
@@ -1262,7 +1262,7 @@
         "id": "1352da3a"
       },
       "source": [
-        "En suivant cette idée, il nous suffit de prendre $\\mathcal{N}(0,~1/d)$ pour avoir une loi qui minimise la variance."
+        "En suivant cette idée, un bon candidat est une loi qui se concentre de plus en plus autour de zero au fur et à mesure que la dimension augmente. Un bon candidat est donc une normale centrée dont la variance est proportionnelle à 1/d."
       ]
     },
     {
